--- a/пример-2/Makefile
+++ b/пример-2/Makefile
@@ -12,13 +12,13 @@ all: debug release
 
 debug: $(DEBUG_EXEC)
 
-hello-dbg: $(SOURCE)
-	g++ $(DEBUG_FLAGS) $< -o $@
+hello-dbg: hello.cpp
+	g++ $(DEBUG_FLAGS) hello.cpp -o $(DEBUG_EXEC) 
 
 release: $(RELEASE_EXEC)
 
-hello: $(SOURCE)
-	g++ $(RELEASE_FLAGS) $< -o $@
+hello: hello.cpp
+	g++ $(RELEASE_FLAGS) hello.cpp -o $(RELEASE_EXEC)
 
 clean:
 	rm -f $(RELEASE_EXEC) $(DEBUG_EXEC)
